--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": ">=4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "^2.1.1",
@@ -37,7 +37,7 @@
     "raf": "3.4.0",
     "react": "^16.4.0",
     "react-dev-utils": "^8.0.0",
-    "react-dom": "^16.4.0",
+    "react-dom": ">=16.4.2",
     "react-popper": "^0.10.4",
     "react-router-bootstrap": "^0.24.4",
     "react-transition-group": "^2.3.1",
