--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "autoprefixer": "7.1.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-jest": "^25.2.4",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
@@ -28,7 +28,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "^24.5.0",
+    "jest": "^25.2.4",
     "mem": ">=4.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -37,7 +37,7 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.4.0",
-    "react-dev-utils": "^8.0.0",
+    "react-dev-utils": "^10.2.1",
     "react-dom": ">=16.4.2",
     "react-popper": "^0.10.4",
     "react-router-bootstrap": "^0.24.4",
@@ -47,7 +47,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
+    "webpack": "^4.42.1",
     "webpack-dev-server": "^3.2.1",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
