--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "http-proxy": ">=1.18.1",
     "jest": "^25.2.4",
     "mem": ">=4.0.0",
     "object-assign": "4.1.1",
@@ -50,7 +51,8 @@
     "webpack": "^4.42.1",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "yargs-parser": ">=13.1.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
