--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
     "http-proxy": ">=1.18.1",
     "jest": "^25.2.4",
     "mem": ">=4.0.0",
+    "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.7.2",
     "raf": "3.4.0",
-    "react": "^16.4.0",
+    "react": "^16.13.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": ">=16.4.2",
     "react-popper": "^0.10.4",
     "react-router-bootstrap": "^0.24.4",
-    "react-transition-group": "^2.3.1",
+    "react-transition-group": "^2.9.0",
     "reactstrap": "^6.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
