--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "http-proxy": ">=1.18.1",
+    "immer": "^8.0.1",
     "jest": "^25.2.4",
     "mem": ">=4.0.0",
     "node-fetch": "^2.6.1",
